--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "npx prettier  --check .",
+    "prettier:fix": "npx prettier --write .",
+    "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -19,7 +24,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.27.0",
+    "prettier": "^3.3.2",
     "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
